# cpp_pong

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  cspell.json
src/: Ball.cpp  Ball.hpp  ComputerPaddle.cpp  ComputerPaddle.hpp  Crash.cpp  Crash.hpp  Events.cpp  Events.hpp  Goal.cpp  Goal.hpp  IGameObject.hpp  Logging.hpp  Math.hpp  PaddleGraphicComponent.cpp  PaddleGraphicComponent.hpp  PhysicsObjectTag.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerPaddle.cpp  PlayerPaddle.hpp  PoolManager.hpp  RectangleColliderComponent.cpp  RectangleColliderComponent.hpp  RectanglePhysicsObject.cpp  RectanglePhysicsObject.hpp  ScoreKeeper.cpp  ScoreKeeper.hpp  TransformComponent.hpp  Wall.cpp  Wall.hpp  main.cpp
